[package]
name = "fetch-bilibili-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-stream = "0.3.3"
audrey = { version = "0.3.0", features = ["flac", "wav", "ogg_vorbis"] }
clap = { version = "4.0.32", features = ["derive"] }
console = "0.15.4"
futures-util = "0.3.25"
indicatif = "0.17.2"
qr2term = "0.3.1"
reqwest = { version = "0.11.13", features = ["json","stream","multipart"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.0", features = ["full"] }
tokio-util = "0.7.4"
ua_generator = { git = "https://github.com/a11ywatch/ua_generator.git", version = "0.3.5" }


[dev-dependencies]
cpal = "0.10"
